fix typo in Luxembourg

--- a/flaskinventory/templates/meta.html
+++ b/flaskinventory/templates/meta.html
@@ -48,7 +48,7 @@
 <meta name="dc.Coverage" content="Ireland">
 <meta name="dc.Coverage" content="Italy">
 <meta name="dc.Coverage" content="Lithuania">
-<meta name="dc.Coverage" content="Luxemburg">
+<meta name="dc.Coverage" content="Luxembourg">
 <meta name="dc.Coverage" content="Latvia">
 <meta name="dc.Coverage" content="Malta">
 <meta name="dc.Coverage" content="Netherlands">
