--- a/flaskinventory/templates/layout.html
+++ b/flaskinventory/templates/layout.html
@@ -127,6 +127,7 @@
 
                 <p class="text-muted ">This project has received funding from the European Union’s Horizon 2020 research & innovation programme under grant agreement No 951832. The document reflects only the authors’ views. The European Union is not liable for any use that
                     may be made of the information contained herein.</p>
+                    <p class="text-muted">No responsiblity is taken for the correctness of this information.</p>
         </footer>
         </div>
         <!-- Bootstrap Bundle with Popper -->
