tidy up typeahead dependencies

--- a/flaskinventory/templates/layout.html
+++ b/flaskinventory/templates/layout.html
@@ -22,8 +22,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <!-- Typeahead -->
-    <script src="{{ url_for('static', filename='js/jquery.typeahead.js') }}"></script>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='js/jquery.typeahead_edited.css') }}">
+    <script src="{{ url_for('static', filename='js/jquery.typeahead.min.js') }}"></script>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/jquery.typeahead_edited.css') }}">
 
     <!-- Tom Select -->
     <link href="{{ url_for('static', filename='css/tom-select.min.css') }}" rel="stylesheet">
