--- a/flaskinventory/templates/main/about.html
+++ b/flaskinventory/templates/main/about.html
@@ -66,6 +66,18 @@ If you are using the data in this inventory, please use the following citation:
 }
 ```
 
+# Coverage of Meteor
+
+*Meteor* is a continuously growing database and depends on the contributions of individual users. 
+While there is a small team working on adding new entries and reviewing contributions, there is still much work to be done.
+Therefore, this registry does still not have complete coverage of news sources and media organizations in Europe. 
+It will take time until we get to a satisfactory number of entries to have a true map of the European media landscape.
+
+Nevertheless, **we encourage all users to contribute entries to *Meteor***. 
+Even if it is only a few news sources or your favourite text analysis tool.
+If you are not sure where to start, just drop us an email or tweet and we are happy to help.
+
+
 # Changelog
 
 ### 25 Aug 2022 (Version 1.1.1): Queryable facets
