increment version and changelog

--- a/flaskinventory/templates/main/about.html
+++ b/flaskinventory/templates/main/about.html
@@ -80,6 +80,19 @@ If you are not sure where to start, just drop us an email or tweet and we are ha
 
 # Changelog
 
+### 30 Aug 2022 (Version 1.2.0): Network Graphs 🕸️
+
+ - You can now view a visualization of ownership structures
+ - Entries for news sources and media organizations now automatically show the interactive network plot at the sidebar
+ - New feature still under testing and may not run smoothly!
+
+#### Tweaks for Queries
+
+ - Users can now choose the type of filter connector. E.g., you can now search for news sources that are in `Germany AND France` or  `Germany OR France`
+ - Query fields have now better labels (e.g. "ConceptVar" ➡️ "Concept Variable")
+ - Query results table now stays within its boundaries
+ - Query fields now do not randomly change their order
+
 ### 25 Aug 2022 (Version 1.1.1): Queryable facets
 
  - Fields such as "Audience Size" can now be queried
