#186 make it even more legal

--- a/flaskinventory/templates/layout.html
+++ b/flaskinventory/templates/layout.html
@@ -127,7 +127,7 @@
 
                 <p class="text-muted ">This project has received funding from the European Union’s Horizon 2020 research & innovation programme under grant agreement No 951832. The document reflects only the authors’ views. The European Union is not liable for any use that
                     may be made of the information contained herein.</p>
-                    <p class="text-muted">No responsiblity is taken for the correctness of this information.</p>
+                    <p class="text-muted">Although the information found on this system has been produced and processed from sources believed to be reliable, no warranty, express or implied, is made regarding accuracy, adequacy, completeness, legality, reliability or usefulness of any information.</p>
         </footer>
         </div>
         <!-- Bootstrap Bundle with Popper -->
