--- a/flaskinventory/templates/view/elements/organization/sidebar.html
+++ b/flaskinventory/templates/view/elements/organization/sidebar.html
@@ -49,7 +49,7 @@
 <div class="border rounded py-3 mt-4">
     <span  class="d-flex px-3 my-2 pb-2 mx-1 border-bottom">
         <h5 class="flex-grow-1">Ownership Structure
-        <i class="fas mx-1 fa-info-circle text-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Current entry is highlighted in orange. Use mouse wheel or pinch to zoom. You can also pan around."></i>
+        <i class="fas mx-1 fa-info-circle text-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Current entry is highlighted in orange. Use mouse wheel or pinch to zoom. You can also pan around and click on nodes to get to their entries. Media organizations and persons are purple."></i>
     </h5>
     </span>
     
