--- a/flaskinventory/templates/view/elements/source/sidebar.html
+++ b/flaskinventory/templates/view/elements/source/sidebar.html
@@ -54,7 +54,7 @@
 <div class="border rounded py-3 mt-4">
 <span  class="d-flex px-3 my-2 pb-2 mx-1 border-bottom">
     <h5 class="flex-grow-1">Ownership Structure</h5>
-    <i class="fas mx-1 fa-info-circle" data-bs-toggle="tooltip" data-bs-placement="top" title="Use mouse wheel to zoom and click on nodes to get to their entry. Current entry is highlighted in organge. Media organizations and persons are purple."></i>
+    <i class="fas mx-1 fa-info-circle" data-bs-toggle="tooltip" data-bs-placement="top" title="Current entry is highlighted in orange. Use mouse wheel or pinch to zoom. You can also pan around and click on nodes to get to their entries. Media organizations and persons are purple."></i>
 
 </span>
 
