#172 now tries to parse github in CRAN and PyPI packages

--- a/flaskinventory/templates/add/sidebar.html
+++ b/flaskinventory/templates/add/sidebar.html
@@ -4,7 +4,7 @@
 </span>
 <div class="list-group list-group-flush border-bottom scrollarea px-3 py-1">
 <p>
-    If you provide a DOI, arXiv, Python module, R-Package name, or GitHub repository, the inventory tries to get some data automatically!
+    If you provide a DOI, arXiv, Python module (PyPI), R-Package name, or GitHub repository, the inventory tries to get some data automatically!
 </p>
 
 <div class="row">
@@ -15,7 +15,7 @@
                         <option value="cran">CRAN</option>
                         <option value="doi">DOI</option>
                         <option value="github">GitHub</option>
-                        <option value="python">Python</option>
+                        <option value="python">PyPI</option>
                         </select>
     </div>
     <div class="col-8">
