--- a/flaskinventory/templates/query/tomselect.html
+++ b/flaskinventory/templates/query/tomselect.html
@@ -4,7 +4,7 @@
     
         {% set field = form.get_field(f) %}
     
-        {% if field.type ==  "TomSelectMutlitpleField" %}
+        {% if field.type ==  "TomSelectMultipleField" %}
     
         new TomSelect('#{{ field.id.replace('.', '\\\.').replace('~', '\\\~').replace('|', '\\\|') }}', 
         {
