fixed glitch in JS

--- a/flaskinventory/templates/query/sidebar.html
+++ b/flaskinventory/templates/query/sidebar.html
@@ -149,7 +149,12 @@ function clearFields(event) {
             try {
                 el.tomselect.clear()
             } catch {
+                if (el.type !== 'checkbox') {
                 el.value = ""
+                } else {
+                    el.checked = false
+                }
+
             }
         }
     }
