more explanations on alternative media

--- a/flaskinventory/templates/guides/newsource.html
+++ b/flaskinventory/templates/guides/newsource.html
@@ -99,6 +99,42 @@ to find an appropriate source for many European countries. E.g., for
 Austria the [OEAK](https://www.oeak.at/auflagedetails/) or Germany the
 [IVW](https://www.ivw.eu/print/print).
 
+# Publication Kind: What label or labels describe the main source?
+
+This variable points to the main product. For example, if you enter a website for an online newspaper, select newspaper. 
+For example, if you enter a social media account that is related to a TV show, select TV show. 
+We only use the labels that the news source uses to describe itself. For newspapers or TV shows, this is often clear and does not need too much consideration.
+The first thing to check is are the "about me" or "imprint" pages.
+
+For some cases, labels need to be inferred. This means that we look for specific key phrases to categorize difficult cases
+
+## Alternative Media
+
+This type of publication is probably the hardest to identitfy.
+For *Meteor*, we do not have a set catalogue of content criteria (of the news articles) that classify a news source as "alternative news". 
+As mentioned, we use the labels that the news source uses to *describe itself*. 
+Therefore, if a news source states about itself that it provides an "alternative" coverage, view, perspective, or topics 
+then this is already sufficient for classification.
+
+Other phrases that fall into the label of "alternative media" include (not limited):
+
+ - "against the mainstream"
+ - "providing the truth" (as opposed to other media)
+ - "not part of the establishement"
+ - "not part of the media system"
+ - "against traditional forms of journalism"
+
+There are many cases where the self-description does not mention any of this, but you would still get the impression that this news outlet
+somehow belongs into the category "alternative media". However, in such cases we would avoid using the label "alternative media" as much as possible.
+Instead we would use the label that most accurately matches the self-description of the news source.
+
+## News Blog
+
+Many blogs already carry the label in its title, they typically comment on other news and are highly opionated. They provide some kind of third-party interpretation of news.
+If "blog" is not in the source's title, then we look at its self description. 
+If it includes that the news source mainly provides commentary on other news, then it falls into the category of "news blog".
+
+
 [TOC]
 
 {% endfilter %}
