--- a/flaskinventory/templates/guides/newsource.html
+++ b/flaskinventory/templates/guides/newsource.html
@@ -120,6 +120,7 @@ Other phrases that fall into the label of "alternative media" include (not limit
 
  - "against the mainstream"
  - "providing the truth" (as opposed to other media)
+ - "reporting on what the mass media does not"
  - "not part of the establishement"
  - "not part of the media system"
  - "against traditional forms of journalism"
