--- a/flaskinventory/templates/main/about.html
+++ b/flaskinventory/templates/main/about.html
@@ -80,6 +80,12 @@ If you are not sure where to start, just drop us an email or tweet and we are ha
 
 # Changelog
 
+### 05 Sep 2022 (Version 1.2.1): Tweaks
+
+ - Author sequence in query results is now rendered correctly (first author first)
+ - Minor UI tweaks
+ - Correct rendering of verified accounts
+
 ### 30 Aug 2022 (Version 1.2.0): Network Graphs 🕸️
 
  - You can now view a visualization of ownership structures
