--- a/flaskinventory/templates/main/about.html
+++ b/flaskinventory/templates/main/about.html
@@ -80,6 +80,13 @@ If you are not sure where to start, just drop us an email or tweet and we are ha
 
 # Changelog
 
+### 06 Sep 2022 (Version 1.2.2): Improvements
+
+ - Added little button in detail views that allow the user to directly send an email to the WP3 Team
+ - Fixed bug when querying audience size
+ - Fixed bug that prevented automated form filling when adding new tools
+ - Text Units and Organizations can now be added on the fly when making / editing entries (Organizations, Archives, Datasets, Corpora)
+
 ### 05 Sep 2022 (Version 1.2.1): Tweaks
 
  - Author sequence in query results is now rendered correctly (first author first)
