updated / sorted resources list

--- a/flaskinventory/templates/guides/resources.html
+++ b/flaskinventory/templates/guides/resources.html
@@ -8,37 +8,94 @@ All resources are curated by the Meteor Team (WP3 of the OPTED Consortium) and t
 
 ## Circulation and Audience Size
 
+### Global
+
 - [International Federation of Audit Bureaux of Circulations](https://www.ifabc.org/members/full-member-list-alphabetically): Registry of circulation monitoring organizations in different countries
 - [World Press Trends](https://wan-ifra.org/world-press-trends/): Meta-data Database, member application required. Circulation, readership, revenue, advertising expenditure, digital usage, data for top selling titles in each country
+
+### Austria
+
 - [ÖAK](https://www.oeak.at/auflagedetails/): Circulation of newspapers (Austria)
 - [Media Analyse](https://www.media-analyse.at/): Reach per print newspaper (Austria)
+
+### Belgium
+
 - [CIM](https://www.cim.be/): Information about media circulation and reach (Belgium)
+
+### Denmark
+
 - [Danske Medier](https://danskemedier.dk/branchefakta/medieforbrug/oplagskontrol/): Information about media circulation and reach (Denmark)
+
+### Finland
+
 - [Media Audit Finland](https://mediaauditfinland.fi/): Information about media circulation and reach (Finland)
+
+### Germany
+
 - [IVW](https://www.ivw.de/): Circulation of print media (Germany)
+
+### Greece
+
 - [EIHEA](https://www.eihea.gr/eihea.php?contentid=164) Circulation information on print media (Greece)
+
+### Italy
+
 - [ADS](https://www.adsnotizie.it/): Circulation of media (Italy)
 
 ## Media Organizations and Ownership
+
+### Global
 
 - [Columbia Journalism Review](http://beta.cjr.org/resources/): Ownership relations of global media organisations (USA, Global)
 - [Media Ownership Monitor](https://mom-rsf.org/en/): Information about media ownership, reporters without borders (Global)
 - [OpenCorporates](https://opencorporates.com/): Large record of company registration data (Global)
 - [Open Ownership](https://register.openownership.org/): A nonprofit aiming to improve "transparency over who owns and controls companies". Large record of company ownership structures (Global)
 - [Media Info](https://media.info/): Information about media companies (UK, Ireland, Australia)
+
+### European Union
+
 - [Business Registers in EU Countries](https://e-justice.europa.eu/106/EN/business_registers_in_eu_countries): Official overview of webportals for company register information (EU)
+
+### Austria
+
 - [Aurelia](https://aurelia.bvdinfo.com/): Detailed information about companies: employees, turnover, date of incorporation, etc. (Austria)
 - [FirmenABC](https://www.firmenabc.at/): Information about companies / registered businesses (Austria)
+- [Vereinsregister](https://citizen.bmi.gv.at/at.gv.bmi.fnsweb-p/zvn/public/Registerauszug): Registry of clubs or associations. (Austria)
+
+### Belgium
+
 - [BCE](https://kbopub.economie.fgov.be/kbopub/zoeknaamfonetischform.html): Company registry, lookup financial statements, audited accounts (Belgium)
+
+### Bulgaria
+
 - [Bulgarian Business Register](https://portal.registryagency.bg/CR/en/Reports/VerificationPersonOrg): Commercial register and register of non-profit legal entities (Bulgaria)
+
+### Czech Republic
+
 - [Czech Public Register](https://or.justice.cz/ias/ui/rejstrik): Information about companies, associations, trade unions, etc. (Czech Republic)
+
+### Germany
+
 - [KEK-Online](https://www.kek-online.de/service/verlinkungen): Ownership database of news sources (Germany)
+
+### Hungary
+
 - [Hungarian Business Register](https://www.e-cegjegyzek.hu/): Company Register, information on date of incorporation, subsidiaries, etc (Hungary)
+
+### Ireland
+
 - [Media Ownership Ireland](http://mediaownership.ie/): Initiative of the Broadcasting Authority of Ireland provides a structured and searcheable reference database of Irish media outlets (Ireland)
+
+### Spain
+
 - [Infocif](www.infocif.es): Company Register (Spain)
+
+### United Kingdom
+
 - [Find and update company information](https://find-and-update.company-information.service.gov.uk/): Company registry, lookup financial statements, date of incorporation, ownerships of companies (United Kingdom)
 
 ## Press Councils
+
 - [Alliance of Independent Press Councils of Europe](https://presscouncils.eu/Comparative-data-on-media-councils): Press Council Interest Group, providing information on member's press councils (e.g. budgeting, scale)
 
 ## Research, Surveys and Polls
@@ -56,7 +113,7 @@ All resources are curated by the Meteor Team (WP3 of the OPTED Consortium) and t
 
 ## Alternative Media
 
-- [PSIRAM](https://www.psiram.com/de/index.php/Hauptseite): Wiki of "alternative belief systems". Contains information about various alternative media (German).
+- [PSIRAM](https://www.psiram.com/): Wiki of "alternative belief systems". Contains information about various alternative media (English, German, French).
 
 [TOC]
 
