added some more FAQs

--- a/flaskinventory/templates/guides/faq.html
+++ b/flaskinventory/templates/guides/faq.html
@@ -8,6 +8,26 @@ All questions are curated by the Meteor Team (WP3 of the OPTED Consortium) and t
 
 {% filter markdown %} 
 
+# Completeness & Scope
+
+**How come *X* is not included in Meteor?**
+
+**Answer:** *X* is not included, because no one added it yet. If you think it should be in *Meteor*, go ahead and make a new entry!
+
+**How come *Y* is in Meteor, but *X* is not?**
+
+**Answer:** Just because someone already added *X* does not mean that *Y* should not be included. So you can go ahead and make a new entry.
+
+**Will Meteor ever be complete?**
+
+**Answer:** Achieving full coverage is a difficult task, but we are optimistic that we will cover the most import news sources, media organizations, datasets, archives, corpora, and text analysis tools.
+We also hope that individuals will share their knowledge and expertise with the researcher community and add entries.
+
+**I found a mistake! Does it mean that the information in Meteor is inaccurate?**
+
+**Answer:** Although, we carefully review every new entry, there is still a chance that there are small mistakes here and there. Often, the news source or organization has changed since it was entered. Or sometimes it is very difficult to find reliable and accurate information. If you find a mistake, you can let us know and we are happy to fix it!
+
+
 # Ownership
 
 **How can I find ownership information?**
