cosmetic improvements in FAQ and Link Collection

--- a/flaskinventory/templates/guides/faq.html
+++ b/flaskinventory/templates/guides/faq.html
@@ -14,7 +14,7 @@ All questions are curated by the Meteor Team (WP3 of the OPTED Consortium) and t
 
 **Answer:** *X* is not included, because no one added it yet. If you think it should be in *Meteor*, go ahead and make a new entry!
 
-**How come *Y* is in Meteor, but *X* is not?**
+**How come *X* is in Meteor, but *Y* is not?**
 
 **Answer:** Just because someone already added *X* does not mean that *Y* should not be included. So you can go ahead and make a new entry.
 
@@ -25,7 +25,9 @@ We also hope that individuals will share their knowledge and expertise with the 
 
 **I found a mistake! Does it mean that the information in Meteor is inaccurate?**
 
-**Answer:** Although, we carefully review every new entry, there is still a chance that there are small mistakes here and there. Often, the news source or organization has changed since it was entered. Or sometimes it is very difficult to find reliable and accurate information. If you find a mistake, you can let us know and we are happy to fix it!
+**Answer:** Although we carefully review every new entry, there is still a chance that there are small mistakes here and there. 
+Often, the news source or organization has changed since it was entered, or sometimes it is very difficult to find reliable and accurate information. 
+If you find a mistake, you can let us know and we are happy to fix it!
 
 
 # Ownership
