--- a/flaskinventory/templates/guides/newsource.html
+++ b/flaskinventory/templates/guides/newsource.html
@@ -84,7 +84,7 @@ producing sources. Please carefully read the following definition.
 
 # List of credible resources
 
-We provide a **[curated and growing list of resources ]({{ url_for('main.guides_resources') }})** that we found useful
+We provide a **[curated and growing list of resources ]({{ url_for('main.link_collection') }})** that we found useful
 for adding entries to the inventory.
 
 ## Audience Size for Print Newspapers
