--- a/flaskinventory/templates/header.html
+++ b/flaskinventory/templates/header.html
@@ -107,7 +107,7 @@
 
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <li><a class="dropdown-item" href="{{ url_for('main.guides_newssource') }}" tabindex="-1"><i class="fas fa-book-open me-2 fa-fw"></i>Guides</a></li>
-                    <li><a class="dropdown-item" href="{{ url_for('main.guides_resources') }}" tabindex="-1"><i class="fas fa-external-link-alt me-2 fa-fw"></i>Link Collection</a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('main.link_collection') }}" tabindex="-1"><i class="fas fa-paperclip me-2 fa-fw"></i>Link Collection</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('main.guides_teaching') }}" tabindex="-1"><i class="fas fa-chalkboard me-2 fa-fw"></i>Teaching Materials</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('main.guides_faq') }}" tabindex="-1"><i class="fas fa-question-circle me-2 fa-fw"></i>FAQ</a></li>
                 </ul>
